--- a/assignment3/.env
+++ b/assignment3/.env
@@ -4,11 +4,11 @@ APP_KEY=base64:UJ1kxLj4Xf3uB9jyYDoVsYpWpll/zp9XB8Ip90o9D/Y=
 APP_URL=http://localhost
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=assignment3_db
+DB_USERNAME=assignment3_admin
+DB_PASSWORD=assignment3_admin
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
